--- a/www/index.html
+++ b/www/index.html
@@ -43,6 +43,8 @@
     </head>
     <body>
         <div class="app">
+			<div id="demo">
+			</div>
         </div>
         <script type="text/javascript" src="phonegap.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
