adding some css

--- a/www/index.html
+++ b/www/index.html
@@ -1,7 +1,8 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
+<!DOCTYPE HTML>
 <html>
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+		<meta name="viewport" content="user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimal-ui" />
         <title>Bangalore Auto Rickshaw New Fare Calculator!</title>
 		<script>
 		function calcFare() {
@@ -19,13 +20,14 @@
 	  }	
 		</script>
     </head>
-    <body>
-        <h1>Bangalore Auto Rickshaw New Fare Calculator!</h1>
-        <h3>Enter old fare to get new fare</h3>
-          <form method="post" >
-              <input type="text" name="oldf" id="oldf" />
-              <input type="submit" value="Find!" onclick="calcFare()" />
+    <body style="margin-top:30px; overflow:hidden; zoom:1;">
+        <h1 style="text-align:center; color:#555; font-size:20px;">Bangalore Auto Rickshaw New Fare Calculator!</h1>
+		<hr/>
+        <h3 style="text-align:center;color:green;">Enter old fare to get new fare</h3>
+          <form>
+              <input style="width:90%; height:30px; border:1px solid #333; margin:0px 5% 15px 5%;" type="number" name="oldf" id="oldf" />
+              <input style="width:50%; background-color: #333; border:0px; color:#fff; font-weight: bold; padding: 10px; margin-left:25%;" type="submit" value="Find!" onclick="calcFare()" />
           </form>
-        <h4>Developed by <a href="http://www.techbangalore.com" >Tech Bangalore</a></h4>
+        <h4 style="color:#555; margin-top:10%; text-align:center;">Developed by <a href="http://www.techbangalore.com" style="text-decoration:none; color:green">Tech Bangalore</a></h4>
     </body>
 </html>
